# learning-progress-tracker

./: .gitignore  CLAUDE.md  config.yaml  graph.html  pyproject.toml  skill-tree.html
.github/workflows/: deploy.yml
cli/: build_graph.py  config.py  levels.py  main.py  page_reader.py  page_writer.py  priority.py  progress.py
docs/superpowers/plans/: 2026-07-08-learning-progress-tracker.md
docs/superpowers/specs/: 2026-07-08-learning-progress-tracker-design.md
tests/: test_cli.py  test_config.py  test_integration.py  test_page_reader.py  test_page_writer.py  test_priority.py  test_progress.py
vault/pages/: ALU Design.md  API Call Insertion.md  API Design.md  ARM Architecture.md  ARM NEON.md  ASR.md  AST.md  Abstraction.md  Acceptance Rate.md  Action Space Design.md  Activation Functions.md  Activation Probing.md  Activation Recomputation.md  Active Learning.md  Actor-Critic.md  Adam Optimizer.md  Adaptive Retrieval.md  Advisory Locks.md  Agent Architecture.md  Agent Memory Systems.md  Agent Memory.md  Agent-Computer Interface.md  Agentic Systems.md  Alignment.md  Architecture.md  Assembly Language.md  Atomic Broadcast.md  Attention Head Analysis.md  Attention Is All You Need.md  Attention Mechanisms.md  Attention Tiling.md  Audio Codecs.md  Audio Processing Basics.md  Autoencoders.md  Automated Prompt Tuning.md  Autonomous Debugging.md  Autoregressive Decoding.md  Auxiliary Training Targets.md  BERT: Pre-training of Deep Bidirectional Transformers.md  BLT: Patches Scale Better Than Tokens.md  (+588 more)
