[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-progress-tracker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "thefuzz>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
lpt = "cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["cli*"]
